// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MistakesSnapshot should render with 0 1`] = `
<div
  className="game__mistakes"
/>
`;

exports[`MistakesSnapshot should render with 0 mistake 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
</div>
`;
